# minijs

./: Cargo.toml
cfg/: Cargo.toml
cfg/src/: cfg.rs
lang/src/: ast.rs  ir.rs
parser/: Cargo.toml
parser/src/: grammar.lalrpop  lib.rs  state.rs
sema/: Cargo.toml
sema/src/: from_ast.rs  lib.rs  sema.rs  symtable.rs
src/: main.rs
translator/: Cargo.toml
translator/src/: code_writer.rs  lib.rs  trans.rs
vm/: Cargo.toml
vm/src/: env.rs  lib.rs  object.rs  reference.rs  vm.rs  vm_stack.rs
vm/src/allocator/: Cargo.toml
vm/src/allocator/src/: lib.rs
