[package]
name = "translator"
version = "0.1.0"
authors = ["Taemin Cha <krlrhkstk12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang = { path = "../lang", version = "0.1.0" }
cfg = { path = "../cfg", version = "0.1.0" }
sema = { path = "../sema", version = "0.1.0" }
